# k3-siem

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  start.bat  start.sh
.github/workflows/: build-agent.yml  ci.yml
backend/: .env.example  package.json
backend/src/: config.js  index.js
backend/src/data/: dashboardTemplates.js
backend/src/middleware/: auth.js
backend/src/models/: clickhouse.js  db.js
backend/src/routes/: agents.js  api.js  auth.js  dashboardLibrary.js  deploy.js  events.js  ocsf.js  osint.js  teams.js  tenants.js  users.js
backend/src/services/: agentMonitor.js  audit.js  correlationEngine.js  crossCorrelation.js  deployer.js  geoip.js  ingestion.js  iocMatcher.js  ocsfParser.js  realtimeAlerts.js  (+5 more)
backend/tests/: jest.setup.js
docs/architecture/: tenant-foundation.md
docs/rfp-compliance/: compliance-matrix.yaml
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.css
k3-agent/: Dockerfile  agent.py  config.yaml  requirements.txt
k3-agent-cpp/: CMakeLists.txt  README.md  config.yaml.example
k3-agent-cpp/installers/linux/: build-bin.sh  install.sh  k3-agent.service
k3-agent-cpp/installers/macos/: build-dmg.sh  postinstall
k3-agent-cpp/installers/windows/: agent.nsi
k3-agent-cpp/src/: collector.h  config.cpp  config.h  main.cpp  siem_client.cpp  siem_client.h
k3-agent-cpp/src/collectors/: linux.cpp  macos.cpp  windows.cpp
scripts/: backup.sh  purge-demo-operational-data.js  restore.sh  switch-to-live-monitoring.ps1
(+45 files in other folders)
